--- a/Sivir/app/src/main/res/values/colors.xml
+++ b/Sivir/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--<color name="primaryColor">#FF9800</color>-->
+    <!--<color name="primaryColorDark">#F57C00</color>-->
+    <!--<color name="accentColor">#FF9800</color>-->
+    <!--<color name="black">#000</color>-->
+    <!--<color name="white">#fff</color>-->
+    <!--<color name="gray">#ADB2B2</color>-->
+
     <color name="primaryColor">#2CB1E1</color>
     <color name="primaryColorDark">#0B8CAF</color>
     <color name="accentColor">#7B4CFE</color>
