--- a/Sivir/app/src/main/res/layout/activity_main.xml
+++ b/Sivir/app/src/main/res/layout/activity_main.xml
@@ -14,51 +14,51 @@
             android:id="@+id/app_bar2"
             layout="@layout/app_bar" />
 
-        <LinearLayout
-            android:id="@+id/image_tabs"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:layout_below="@+id/app_bar2"
-            android:background="@color/white"
-            android:orientation="horizontal"
-            android:padding="15dp">
+        <!--<LinearLayout-->
+        <!--android:id="@+id/image_tabs"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="54dp"-->
+        <!--android:layout_below="@+id/app_bar2"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:padding="15dp">-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/noticiason" />
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:src="@drawable/noticiason" />-->
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#DDD" />
+        <!--<TextView-->
+        <!--android:layout_width="1dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="#DDD" />-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/categoriasoff" />
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:src="@drawable/categoriasoff" />-->
 
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="#DDD" />
+        <!--<TextView-->
+        <!--android:layout_width="1dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="#DDD" />-->
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:src="@drawable/matchoff" />
+        <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="1"-->
+        <!--android:src="@drawable/matchoff" />-->
 
-        </LinearLayout>
+        <!--</LinearLayout>-->
 
 
         <ListView
+
             android:id="@+id/card_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/image_tabs"
+            android:layout_below="@+id/app_bar2"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginTop="10dp"
@@ -86,7 +86,7 @@
             android:layout_alignParentStart="true"
             android:background="@color/white"
             android:gravity="center"
-            android:text="Calidad del aire"
+            android:text="Nivel de confianza : Usuario Nuevo"
             android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
