--- a/Sivir/app/src/main/res/layout/item_card_list.xml
+++ b/Sivir/app/src/main/res/layout/item_card_list.xml
@@ -5,48 +5,60 @@
     android:layout_marginBottom="@dimen/margin_bottom_relative_card"
     android:layout_marginLeft="@dimen/margin_card_relative"
     android:layout_marginRight="@dimen/margin_card_relative"
+
     android:background="@color/white">
+
 
     <!--275,310-->
     <ImageView
         android:id="@+id/image_main_card"
-        android:layout_width="100dp"
-        android:layout_height="120dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-
-        android:scaleType="centerCrop"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="22dp"
         android:src="@drawable/elecciones_congreso" />
 
     <TextView
         android:id="@+id/tv_title_card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_toRightOf="@+id/image_main_card"
+        android:layout_marginLeft="85dp"
+        android:layout_marginTop="25dp"
         android:text="Title"
-        android:textColor="@color/primaryColor"
-        android:textSize="21sp"
+        android:textColor="@color/black"
+        android:textSize="19sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tv_description_card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_title_card"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/image_main_card"
-        android:maxLines="2"
-        android:text="Description"
-        android:textSize="16sp" />
+        android:maxLines="1"
+        android:text="Reputacion : "
+        android:textSize="17sp" />
+
+    <TextView
+        android:id="@+id/monto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="160dp"
+        android:layout_marginTop="25dp"
+        android:text="Monto: $123.00"
+        android:gravity="right"
+        android:layout_marginRight="10dp"
+        android:textSize="17sp" />
     <!--78,65-->
     <LinearLayout
         android:id="@+id/linear_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_description_card"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="25dp"
         android:layout_toRightOf="@+id/image_main_card"
@@ -56,6 +68,7 @@
         <TextView
             android:id="@+id/tv_fecha_card"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="07/03/2015" />
@@ -66,6 +79,7 @@
             android:layout_height="21dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
+            android:visibility="gone"
             android:src="@drawable/comentarios" />
 
         <TextView
@@ -73,13 +87,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:visibility="gone"
             android:layout_marginLeft="1dp"
-            android:text="16" />
+            android:textColor="@color/black"
+            android:text="Nivel de confianza : " />
+
 
         <ImageView
             android:layout_width="26dp"
             android:layout_height="21dp"
             android:layout_gravity="center_vertical"
+            android:visibility="gone"
             android:layout_marginLeft="18dp"
             android:src="@drawable/match" />
 
@@ -89,6 +107,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="3dp"
+            android:textColor="@color/primaryColorDark"
             android:text="23" />
 
 
@@ -97,7 +116,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="15dp"
-        android:layout_below="@+id/linear_card"
+
+        android:layout_below="@+id/image_main_card"
         android:background="@color/background_material_light"
         android:paddingTop="6dp" />
 
